Ajout d'un mini menu durant la pause en jeu
Les boutons fonctionnels sont : Reprendre et Quitter

--- a/Projet2/Projet2/Projet2.csproj
+++ b/Projet2/Projet2/Projet2.csproj
@@ -126,6 +126,7 @@
     <Compile Include="SpriteAnime.cs" />
     <Compile Include="SpriteCarte.cs" />
     <Compile Include="SpriteDecor.cs" />
+    <Compile Include="SpriteIU.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
